[package]
name = "diesel_transaction_handles"
version = "0.1.1"
authors = ["Aiden McClelland <gagglehoof@gmail.com>"]
repository = "https://github.com/DR-BoneZ/diesel-transaction-handles-rs"
homepage = "https://github.com/DR-BoneZ/diesel-transaction-handles-rs"
license = "MIT"
readme = "README.md"
documentation = "http://docs.rs/diesel_transaction_handles/"
description = "shareable transaction handles for diesel, with optional rollback hooks"
edition = "2018"

[features]
default = ["rollback_hooks"]
log_errors_on_drop = []
panic_errors_on_drop = []
rollback_hooks = []

[dependencies]
diesel = "1.4"
failure = "0.1"

[dev-dependencies]
diesel = { version = "1.4", features = ["postgres"] }